tests/spec/compile-fail/170_unknown_enum_variant.zn
// category: compile-fail
// stage: mvp
// milestone: M2
// purpose: enum-qualified constructors must name declared variants

module tests.fail.unknownEnumVariant;

enum State {
    Ready,
    Done,
}

fn badState() -> State {
    return State.Missing; // expected-error[E0201]: variant Missing is not declared in enum State
}
